--- a/src/components/prompt-list.component.css
+++ b/src/components/prompt-list.component.css
@@ -244,8 +244,9 @@
 
 .timestamp-info {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 4px;
+  justify-content: space-between;
 }
 
 .timestamp {
