--- a/src/components/loader/loader.component.css
+++ b/src/components/loader/loader.component.css
@@ -31,7 +31,7 @@
     position: absolute;
     width: 6px;
     height: 20px;
-    background: #00000050;
+    background: #764ba2;
     top: 20px;
     animation: loadership_scale 1.8s infinite, loadership_fade 1.8s infinite;
     animation-timing-function: ease-in-out;
