--- a/src/components/prompt-form.component.css
+++ b/src/components/prompt-form.component.css
@@ -126,9 +126,9 @@
 }
 
 .array-item-content {
-  display: flex;
+  /* display: flex;
   gap: 12px;
-  align-items: flex-start;
+  align-items: flex-start; */
 }
 
 .array-item-content .form-input,
@@ -137,8 +137,7 @@
 }
 
 .remove-btn {
-  width: 36px;
-  height: 36px;
+  padding: 12px 16px;
   border: 2px solid #ef4444;
   background: #fef2f2;
   color: #ef4444;
@@ -283,7 +282,26 @@
 
   .remove-btn {
     align-self: flex-end;
-    width: 32px;
-    height: 32px;
+    padding: 12px 16px;
   }
+
+ 
 }
+
+ .remove-form-array{
+    display: flex !important; 
+    align-items: end !important;
+  }
+
+  .reason-form-group{
+    display: flex;
+    margin-top: 8px;
+    gap: 24px;
+  }
+  .reason-form-group .form-group{
+    width: 100%;
+  }
+
+  .add-int-group{
+     text-align: end;
+  }
