--- a/src/components/prompt-form.component.html
+++ b/src/components/prompt-form.component.html
@@ -117,7 +117,7 @@
         </div>
 
         <div class="form-group">
-          <label for="maxOutputTokens" class="form-label">maxOutputTokens</label>
+          <label for="maxOutputTokens" class="form-label">Max Output Tokens</label>
           <!-- <p class="form-helper">Define Prompt</p> -->
           <input type="text" 
             id="maxOutputTokens" 
@@ -142,7 +142,7 @@
 
         <!-- Instruction Paragraphs -->
         <div class="form-group">
-          <label  class="form-label">Instructions</label>
+          <label  class="form-subtitle">Instructions</label>
           <div formArrayName="instructions" class="form-array">
             <div *ngFor="let paragraph of instructions.controls; let i = index" 
                  class="form-array-item">
