--- a/src/app.component.css
+++ b/src/app.component.css
@@ -146,7 +146,7 @@
   transform: translateX(100%);
   transition: all 0.3s ease;
   z-index: 1000;
-  height: 60px;
+  /* height: 60px; */
 }
 
 .toast.show {
@@ -157,8 +157,10 @@
 .toast-content {
   display: flex;
   align-items: center;
-  gap: 12px;
-  padding: 16px 20px;
+  justify-content: center;
+  /* gap: 12px; */
+  /* padding: 16px 20px; */
+  padding: 10px;
 }
 
 .toast-icon {
@@ -170,15 +172,15 @@
   color: #059669;
 }
 .form-input {
-  padding: 12px 16px;
+  padding:16px 32px;;
   border: 2px solid #e5e7eb;
-  border-radius: 8px;
+  border-radius: 12px;
   font-size: 1rem;
   transition: all 0.2s ease;
   background: white;
 }
 .m-r{
-  margin-right: 20px;
+  margin-right: 35px;
 }
 
 .form-input:focus {
